packages/svelte/tests/validator/samples/class-state-constructor-8/input.svelte.js
export class Counter {
	constructor() {
		this.count = -1;
		this.count = $state(0);
	}
}
