packages/svelte/tests/compiler-errors/samples/runes-wrong-state-args/main.svelte.js
const foo = $state(1, 2, 3);
